docs/versioned_docs/version-1.0.1/tinyLeague™/what-is-tinyleague.md
---
id: what-is-tinyleague
title: What is tinyLeague™?
sidebar_position: 1
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import useBaseUrl from '@docusaurus/useBaseUrl';

## 🏆 tinyLeague™

**tinyLeague™** is the flagship product line from Digital Sports Solutions. By combining modular hardware, software, and database technology, tinyLeague looks to change the way recreational and semi-professional leagues play.

Whether you're a tournament organizer, league official, casual team, or just an interested player, tinyLeague makes it easier to run matches with precision and consistency. tinyLeague is still in its early stages of development and will become a small part of a large sports management ecosystem that will revolutionize court sports like dodgeball in the future. Please stay tuned to be a part of the court sport revolution!

---

## 🧩 The tinyLeague™ Ecosystem

### 1. [Hardware](/docs/founders-edition/introduction)

A robust set of IOT enabled hardware devices that enhance the live player experience.

<Tabs>
  <TabItem value="founders-edition" label="Founders Edition" default>
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Product_Photos/Founders_Edition_Front.png')} alt="Founders Edition" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    A custom-built LED display that shows the active shot clock for a team, including many customizable features. The **Founders Edition Shot Clock Module** receives real-time commands from the app and provides clear, visible timing for players and referees.
  </TabItem>
  <TabItem value="pro-edition" label="Pro Edition">
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Product_Photos/Double-Digit-Shot-Clock.png')} alt="Pro Edition" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    The pro edition shot clock module for the tinyLeague™ ecosystem. **Coming soon!**
  </TabItem>
  <TabItem value="gameclock-module" label="Mini Game Clock">
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Product_Photos/Full-Mini-Game-Clock.png')} alt="Mini Game Clock" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    tinyLeague™'s Mini Game Clock, for adding new levels of automatical match statistics to court sports. **Coming soon!**
  </TabItem>
  <TabItem value="clkBox" label="Hub Module">
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Product_Photos/clkBox.png')} alt="Hub Module" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    tinyLeague™'s Hub module allows the connection of all game managagement hardware to the tinyLeague™ web interface. **Coming soon!**
  </TabItem>
</Tabs>

---

### 2. [Software](/docs/tinyLeague-app/app-installation)

An integrated set of tools that allow referees, players, and spectators alike to connect with the tinyLeague™ hardware. 

<Tabs>
  <TabItem value="tL_Hub_App" label="tinyLeague™ Hub App" default>
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/application_icon.png')} alt="tinyLeague™ Hub App" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    The central control interface — available on Android. From resetting the clock to configuring settings, everything is controlled from this mobile app.
    <a href="https://play.google.com/store/apps/details?id=com.demo.tinyLeague_Hub" target="_blank" rel="noopener noreferrer">
    ![Get it on google play badge](https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/GetItOnGooglePlay_Badge.png)
  </a>
  </TabItem>

  <TabItem value="tinyLeague™" label="tinyLeague™">
    <img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Product_Photos/DSStowers.58.png')} alt="tinyLeague™" style={{ maxWidth: '90%', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }} />
    tinyLeague™ is the integrated sports ecosystem that acts as a one-stop-shop for recreational sports leagues. tinyLeague™ will be able to track and report match/player data, manage leagues and organize events, update real time livestreams with match specific information, and more. This web interface is under construction and **COMING SOON**.
  </TabItem>
</Tabs>

---

### 3. [Database](https://www.digitalsportssolutions.com/tinyLeague)

The backbone of the tinyLeague™ ecosystem, storing and organizing the data captured during an event. Although the database is under construction, check out our page for more infomation about the database and its upcoming features.

<img src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/database_graphic.png')} alt="Database Dashboard" />



## 📱 Ready to Get Started?

- [Get started with the Founders Edition Shot Clock Module](/docs/founders-edition/introduction)
- [Get started with the tinyLeague™ Hub App](/docs/tinyLeague-app/app-installation)

Or explore the full docs using the navigation pane on the left.


